# LearningC

./: test.c
c_kleines_programm/: CMakeLists.txt
c_kleines_programm/src/: kleines_programm.c
c_signal_handling/: CMakeLists.txt
c_signal_handling/src/: signal_handling_threaded.cpp  signal_test.c
fifo/: CMakeLists.txt
fifo/include/: fifo.h
fifo/src/: fifo.cpp  fifo_test.cpp
lifo/: CMakeLists.txt
lifo/include/: lifo.h
lifo/src/: lifo.cpp  lifo_test.cpp
lifo_c/: CMakeLists.txt
lifo_c/include/: lifo_c.h
lifo_c/src/: lifo_c.c  lifo_c_test.c
